Correct gallery images overflow
(ActionItem1894)

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3361,13 +3361,15 @@ div.with_media_panel .formfield input {
 .image-gallery ul {
   padding: 0px;
   text-align: center;
+  width: 486px;
+  margin: auto;
 }
 
 .image-gallery-item {
   width: 142px;
   height: 170px;
   list-style: none;
-  margin: 5px;
+  margin: 10px;
   float: left;
   overflow: hidden;
   background-repeat: no-repeat;
